Bug 470523 - font too small
Summary: font too small
Status: RESOLVED FIXED
Alias: None
Product: kgraphviewer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gaël de Chalendar (aka Kleag)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-01 14:51 UTC by Martin Koller
Modified: 2024-04-16 09:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.0
Sentry Crash Report:


Attachments
graph with tiny font (52.29 KB, image/png)
2023-06-01 14:51 UTC, Martin Koller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2023-06-01 14:51:42 UTC
Created attachment 159394 [details]
graph with tiny font

The font used to render labels is too small and can not be changed.
There is no setting for the font in the Configure->Appearance dialog.
See example in attachment.
Even zooming in does not enlarge the font.

Please make the font at least configurable.

Operating System: openSUSE Leap 15.4
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Kernel Version: 5.14.21-150400.24.63-default (64-bit)
Graphics Platform: X11
Processors: 16 × 11th Gen Intel® Core™ i7-11850H @ 2.50GHz
Memory: 30,6 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics
Comment 1 Friedrich W. H. Kossebau 2024-04-16 09:23:02 UTC
Git commit acb5fec4e9614324acdbc4cfce4f387df65bd0f4 by Friedrich W. H. Kossebau.
Committed on 16/04/2024 at 09:16.
Pushed by kossebau into branch 'master'.

Fix bad defaults for fonts, also for colors, shapes & style

The refactoring started in 117f22918f594a046e8e541701a3cd863539cdd0 seems
to have missed out follow-up work to ensure defaults are used where not
set explicitly, as before. e47e5ae6d38c0e16b90714f1887b827a009999d4
later only ensured explicit default font size values exist.
Dot2QtConsts covers many of the defaults indirectly. For QFont though
it was using "" as fort family name, which resulted in random fonts being
picked by Qt.

The implementation now avoids adding explicit attribute instances, but
instead returns default values if not set, for less runtime memory usage.
Related: bug 477036
FIXED-IN: 2.5.0

M  +59   -11   src/part/graphelement.cpp
M  +7    -28   src/part/graphelement.h

https://invent.kde.org/graphics/kgraphviewer/-/commit/acb5fec4e9614324acdbc4cfce4f387df65bd0f4