Fix bad defaults for fonts, also for colors, shapes & style

The refactoring started in 117f22918f594a046e8e541701a3cd863539cdd0 seems
to have missed out follow-up work to ensure defaults are used where not
set explicitly, as before. e47e5ae6d38c0e16b90714f1887b827a009999d4
later only ensured explicit default font size values exist.
Dot2QtConsts covers many of the defaults indirectly. For QFont though
it was using "" as fort family name, which resulted in random fonts being
picked by Qt.

The implementation now avoids adding explicit attribute instances, but
instead returns default values if not set, for less runtime memory usage.

BUG: 470523
BUG: 477036
FIXED-IN: 2.5.0